更新docker常用命令

--- a/docs/07.运维/01.Docker/02.常用服务（Redis、RabbitMQ等）Docker启动指引.md
+++ b/docs/07.运维/01.Docker/02.常用服务（Redis、RabbitMQ等）Docker启动指引.md
@@ -93,3 +93,37 @@ docker run --restart=always --name some-redis -d -p 6379:6379 -v E:/DevData/conf
 
 --restart=always 容器启动后自动重启
 
+## 3.安装Oracle 19c
+### 3.1 拉取镜像
+```shell
+docker pull iatebes/oracle_11g:latest
+```
+
+### 3.2 启动容器(须提前创建数据库目录 /mydata/oracle/oradata)
+```shell
+docker run -d --privileged --name oralce11g -p 3521:1521 iatebes/oracle_11g
+
+
+```
+
+### 进入容器
+
+docker exec -it oralce11g  bash
+### 修改oracle配置
+
+#### 修改root密码
+passwd
+#### 切换oracle用户
+su oracle
+
+#### 匿名登录oracle
+sqlplus /nolog
+#### dba身份登录
+conn /as sysdba
+#### 修改用户system、sys用户的密码
+alter user system identified by system;
+
+alter user sys identified by sys;
+
+#### 测试连接oracle11g
+![img.png](img.png)————————————————
