更新docker常用命令

--- a/docs/07.运维/01.Docker/02.常用服务（Redis、RabbitMQ等）Docker启动指引.md
+++ b/docs/07.运维/01.Docker/02.常用服务（Redis、RabbitMQ等）Docker启动指引.md
@@ -112,18 +112,30 @@ docker exec -it oralce11g  bash
 ### 修改oracle配置
 
 #### 修改root密码
+```shell
 passwd
+```
 #### 切换oracle用户
+```shell
 su oracle
+```
 
 #### 匿名登录oracle
+```shell
 sqlplus /nolog
+```
 #### dba身份登录
+```shell
 conn /as sysdba
+```
 #### 修改用户system、sys用户的密码
+```shell
 alter user system identified by system;
+```
 
+```shell
 alter user sys identified by sys;
+```
 
 #### 测试连接oracle11g
-![img.png](img.png)————————————————
+![img.png](https://jsd.cdn.zzko.cn/gh/xiake23/PicGo-Images/note/img.png)————————————————
