--- a/docs/07.运维/01.Docker/02.常用服务（Redis、RabbitMQ等）Docker启动指引.md
+++ b/docs/07.运维/01.Docker/02.常用服务（Redis、RabbitMQ等）Docker启动指引.md
@@ -138,4 +138,4 @@ alter user sys identified by sys;
 ```
 
 #### 测试连接oracle11g
-![img.png](https://jsd.cdn.zzko.cn/gh/xiake23/PicGo-Images/note/img.png)————————————————
+![img.png](https://fastly.jsdelivr.net/gh/xiake23/PicGo-Images/note/img.png)
