更新docker常用命令

--- a/docs/07.运维/01.Docker/02.常用服务（Redis、RabbitMQ等）Docker启动指引.md
+++ b/docs/07.运维/01.Docker/02.常用服务（Redis、RabbitMQ等）Docker启动指引.md
@@ -107,8 +107,9 @@ docker run -d --privileged --name oralce11g -p 3521:1521 iatebes/oracle_11g
 ```
 
 ### 进入容器
-
+```shell
 docker exec -it oralce11g  bash
+```
 ### 修改oracle配置
 
 #### 修改root密码
