--- a/docs/07.运维/01.Docker/02.常用服务（Redis、RabbitMQ等）Docker启动指引.md
+++ b/docs/07.运维/01.Docker/02.常用服务（Redis、RabbitMQ等）Docker启动指引.md
@@ -101,14 +101,14 @@ docker pull iatebes/oracle_11g:latest
 
 ### 3.2 启动容器(须提前创建数据库目录 /mydata/oracle/oradata)
 ```shell
-docker run -d --privileged --name oralce11g -p 3521:1521 iatebes/oracle_11g
+docker run -d --privileged --name oralcle11g -p 3521:1521 iatebes/oracle_11g
 
 
 ```
 
 ### 进入容器
 ```shell
-docker exec -it oralce11g  bash
+docker exec -it oracle11g  bash
 ```
 ### 修改oracle配置
 
